# flash-rover

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yml  osxcross_setup.sh
ci/: cross-build.sh  firmware.sh  install.sh
cli/: Cargo.toml  build.rs  build.sh
cli/dss/: dss-flash-rover.js
cli/dss/ccxml/: template_cc26x0.ccxml  template_cc26x0r2.ccxml
cli/src/: app.rs  args.rs  dss.rs  flash_rover.rs  main.rs
dss/: Cargo.toml
dss/src/: lib.rs  sys.rs
dss/src/com/: mod.rs
dss/src/com/ti/: mod.rs
dss/src/com/ti/ccstudio/scripting/: mod.rs
dss/src/com/ti/ccstudio/scripting/environment/: mod.rs
dss/src/com/ti/debug/: mod.rs
dss/src/com/ti/debug/engine/: mod.rs
dss/src/com/ti/debug/engine/scripting/: mod.rs
fw/: ccfg_app.c  hard_fault.cpp  hard_fault.hpp  main.cpp
fw/bsp/: conf.hpp  doorbell.hpp  ext_flash.hpp  power.hpp  spi.hpp
fw/gcc/cc13x0-cc26x0/: develop.lds  firmware.lds  flash_rover_fw_cc13x0.projectspec  flash_rover_fw_cc26x0.projectspec  flash_rover_fw_cc26x0r2.projectspec  startup_gcc.c
fw/gcc/cc13x2-cc26x2/: develop.lds  firmware.lds  flash_rover_fw_cc13x2_cc26x2.projectspec  (+1 more)
scripts/: build-fw.bat  cross-build.sh  firmware.sh  install.sh
scripts/cli-entry/: flash-rover  flash-rover.bat
src/: app.rs  args.rs  assets.rs  command.rs  dss.rs  dss_logger.rs  firmware.rs  flash_rover.rs  jvm.rs  main.rs  types.rs  xflash.rs
src/cli/: Cargo.toml  build.rs
src/dss/: dss-flash-rover.js
src/fw/: ccfg_app.c  hard_fault.cpp  hard_fault.hpp  main.cpp
xflash/: Cargo.toml
xflash/src/: assets.rs  command.rs  flash_rover.rs  lib.rs  xflash.rs
xflash/src/assets/ccxml/: template_cc26x0r2.ccxml
xflash/src/fw/: ccfg_app.c  hard_fault.hpp  main.cpp
xflash/src/fw/bsp/: power.hpp
(+45 files in other folders)
