[package]
name = "flash-rover"
version = "0.2.0"
authors = ["Texas Instruments <ti.com>"]
license = "BSD-3-Clause"
edition = "2018"

[[bin]]
name = "ti-xflash"
path = "src/main.rs"

[workspace]
members = [
    "dss",
    "xflash",
]

[dependencies]
clap = "2.33"
path-clean = "0.1"
path-slash = "0.1"
snafu = "0.6"

[dependencies.xflash]
version = "0.1"
path = "./xflash"
