[package]
name = "flash-rover"
version = "0.1.1"
authors = ["Texas Instruments <ti.com>"]
license = "BSD-3-Clause"
edition = "2018"
build = "build.rs"

[build-dependencies]
walkdir = "2"

[dependencies]
clap = "2.33"
failure = "0.1"
path-clean = "0.1"
byte-unit = "3.0"
j4rs = "0.10"
tempfile = "3.1"
path-slash = "0.1"
