[package]
name = "xflash"
version = "0.1.0"
authors = ["Texas Instruments <ti.com>"]
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
byte-unit = "3.0"
path-clean = "0.1"
path-slash = "0.1"
rust-embed = "5.5"
snafu = "0.6"
tempfile = "3.1"

[dependencies.dss]
version = "0.1"
path = "../dss"
